--- a/styles.css
+++ b/styles.css
@@ -279,6 +279,7 @@ h1 {
     font-size: 48px;
     font-weight: 700;
     font-family: 'Poppins', sans-serif;
+    font-display: swap;
 }
 
 .hero p {
@@ -292,7 +293,7 @@ h1 {
 }
 
 .glow-text {
-    animation: glow 5s ease-in-out infinite;
+    animation: glow 3s ease-in-out infinite;
 }
 
 @keyframes glow {
@@ -326,6 +327,7 @@ h1 {
     .hero .overlay {
         background-color: rgba(0, 0, 0, 0.7);
     }
+
 }
 
 
@@ -333,7 +335,7 @@ h1 {
 
 .about{
     width: 100%;
-    margin-bottom: 100px;
+    padding-top: 120px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -375,9 +377,17 @@ h1 {
     color: #000;
 }
 
+@media (max-width: 768px) {
+
+    .about{
+        padding-top: 50px;
+    }
+}
+
+
 /* Experience */ 
 .experience {
-    margin-bottom: 30px;
+    padding-top: 120px;
 }
 
 .timeline {
@@ -515,12 +525,16 @@ h1 {
     .timeline-content p {
         font-size: 0.8em;
     }
+
+    .experience {
+        padding-top: 50px;
+    }
 }
 
 
 /* Project Section */
 .project {
-    padding: 80px 0;
+    padding-top: 120px;
     background-color: transparent;
 }
 
@@ -623,13 +637,18 @@ h1 {
     .project-grid {
         padding: 0 30px;
     }
+    .project {
+        padding-top: 50px;
+    }
 }
 
 /* SKills */
 
 .skills {
+    
     padding: 0 100px;
-    padding-bottom: 100px;
+    padding-top: 120px;
+    margin-bottom: 100px;
     background-color: transparent;
 }
 
