--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,9 @@ body {
     color: #333;
     margin: 0;
     padding: 0;
-    background-color: #ffffff; /* Light gray background for fallback */
+    background-color: #ffffff; 
     background-image: linear-gradient(-45deg, #ffffff, #e5e5e5, #bab8b8, #e9e7e7, #ffffff);
-    background-size: 200% 100%; /* Enlarge background size for animation */
+    background-size: 200% 100%; 
     animation: shiftGradient 3s ease infinite;
     min-height: 100vh;
     max-width: 100vw;
@@ -25,7 +25,7 @@ body {
 
 
 
-h1 {
+h2,h3 {
     text-align: center;
     margin-bottom: 40px;
     font-size: 2.5em;
@@ -222,7 +222,7 @@ h1 {
     align-items: center; /* Centers text elements */
 }
 
-.hero h1, .hero p {
+.hero h2, .hero h1, .hero h3 {
     margin: 0;
     text-align: center;
 }
@@ -275,21 +275,29 @@ h1 {
     }
 }
 
-.hero h1 {
+.hero h2 {
     font-size: 48px;
     font-weight: 700;
     font-family: 'Poppins', sans-serif;
     font-display: swap;
 }
 
-.hero p {
+.hero h3 {
+    font-size: 48px;
+    font-weight: 700;
+    font-family: 'Poppins', sans-serif;
+    font-display: swap;
+}
+
+.hero h1 {
     font-size: 24px;
+    font-weight: normal;
     font-family: 'Poppins', sans-serif;
 }
 
 /* Button styles */
 .hero .text-detail div {
-    margin-top: 20px; /* Space above buttons */
+    margin-top: 20px;
 }
 
 .glow-text {
@@ -310,7 +318,7 @@ h1 {
 /* Responsive Design */
 @media (max-width: 1024px) {
     .hero {
-        height: 100vh; /* Adjust height on smaller screens */
+        height: 100vh;
     }
     .hero .overlay {
         background-color: rgba(0, 0, 0, 0.6);
@@ -318,10 +326,10 @@ h1 {
 }
 
 @media (max-width: 768px) {
-    .hero h1 {
+    .hero h2 , .hero h3{
         font-size: 24px;
     }
-    .hero p {
+    .hero h1 {
         font-size: 20px;
     }
     .hero .overlay {
@@ -414,22 +422,22 @@ h1 {
 .timeline-item::after {
     content: '';
     position: absolute;
-    width: 50px; /* Outer width of the box */
-    height: 50px; /* Outer height of the box */
+    width: 50px; 
+    height: 50px; 
     top: 30px;
-    padding: 10px; /* Space between the border and the image */
-    background-image: url('workbag.png'); /* Replace with your image URL */
+    padding: 10px; 
+    background-image: url('workbag.png'); 
     background-color: #fff;
     background-size: 30px 30px;
     background-position: center;
     background-repeat: no-repeat;
-    box-sizing: border-box; /* Ensures padding is included in the width/height */
-    border: 2px solid #333; /* Inner border */
-    border-radius: 0; /* Removed border-radius for rectangular shape */
+    box-sizing: border-box; 
+    border: 2px solid #333; 
+    border-radius: 0; 
     z-index: 1;
-    transform: rotate(45deg); /* Keeps the 45 degrees rotation */
-    transform-origin: center; /* Ensures the rotation is centered */
-    box-shadow: 0 0 0 4px #333; /* Mimics a double border */
+    transform: rotate(45deg);
+    transform-origin: center;
+    box-shadow: 0 0 0 4px #333; 
 }
 
 .timeline-item.right::after{
@@ -443,10 +451,10 @@ h1 {
 
 
 .timeline-content.right2 {
-    margin-left: 25px; /* This will push the content box to the right side */
+    margin-left: 25px; 
 }
 .timeline-content.left2 {
-    margin-left: auto; /* This will push the content box to the right side */
+    margin-left: auto; 
     margin-right: 25px;
 }
 
@@ -492,7 +500,7 @@ h1 {
     }
 
     .timeline-content.left2 {
-        margin-left: 25px; /* This will push the content box to the right side */
+        margin-left: 25px; 
         margin-right: 0px;
     }
 
@@ -716,7 +724,31 @@ h1 {
 .skill-item:nth-child(2) { animation-delay: 0.2s; }
 .skill-item:nth-child(3) { animation-delay: 0.3s; }
 .skill-item:nth-child(4) { animation-delay: 0.4s; }
-/* ... continue for all items ... */
+.skill-item:nth-child(5) { animation-delay: 0.5s; }
+.skill-item:nth-child(6) { animation-delay: 0.6s; }
+.skill-item:nth-child(7) { animation-delay: 0.7s; }
+.skill-item:nth-child(8) { animation-delay: 0.8s; }
+.skill-item:nth-child(9) { animation-delay: 0.9s; }
+.skill-item:nth-child(10) { animation-delay: 1s; }
+.skill-item:nth-child(11) { animation-delay: 1.1s; }
+.skill-item:nth-child(12) { animation-delay: 1.2s; }
+.skill-item:nth-child(13) { animation-delay: 1.3s; }
+.skill-item:nth-child(14) { animation-delay: 1.4s; }
+.skill-item:nth-child(15) { animation-delay: 1.5s; }
+.skill-item:nth-child(16) { animation-delay: 1.6s; }
+.skill-item:nth-child(17) { animation-delay: 1.7s; }
+.skill-item:nth-child(18) { animation-delay: 1.8s; }
+.skill-item:nth-child(19) { animation-delay: 1.9s; }
+.skill-item:nth-child(20) { animation-delay: 2s; }
+.skill-item:nth-child(21) { animation-delay: 2.1s; }
+.skill-item:nth-child(22) { animation-delay: 2.2s; }
+.skill-item:nth-child(23) { animation-delay: 2.3s; }
+.skill-item:nth-child(24) { animation-delay: 2.4s; }
+.skill-item:nth-child(25) { animation-delay: 2.5s; }
+.skill-item:nth-child(26) { animation-delay: 2.6s; }
+.skill-item:nth-child(27) { animation-delay: 2.7s; }
+.skill-item:nth-child(28) { animation-delay: 2.8s; }
+.skill-item:nth-child(29) { animation-delay: 2.9s; }
 .skill-item:nth-child(30) { animation-delay: 3s; }
 
 @media (max-width: 768px) {
