--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,7 @@ body {
 
 
 
-h2,h3 {
-    text-align: center;
-    margin-bottom: 40px;
-    font-size: 2.5em;
-    letter-spacing: 5px;
-}
+
 
 
 /* Header */ 
@@ -192,6 +187,13 @@ h2,h3 {
     object-fit: cover;
     z-index: 1;
     animation: scaleImage 1.5s ease-in-out alternate;
+}
+
+.hero h2, .hero h3 {
+    text-align: center;
+    margin-bottom: 40px;
+    font-size: 2.5em;
+    letter-spacing: 5px;
 }
 
 .hero .overlay {
